removed instantclick due to weird behaviour with bootstrap-toggle

--- a/app/templates/account/register.twig
+++ b/app/templates/account/register.twig
@@ -61,7 +61,7 @@
 			<p>{% trans %}You still need to choose your username.{% endtrans %}</p>
 			{% else %}
 			<h2>{% trans %}This is Lorry.{% endtrans %}</h2>
-			<p class="lead">{% trans %}Lorry is a fan page, distribution platform and online community for players and fans of the Clonk series.{% endtrans %} <a href="{{base}}/about" data-instant>{% trans %}Learn more&hellip;{% endtrans %}</a></p>
+			<p class="lead">{% trans %}Lorry is a fan page, distribution platform and online community for players and fans of the Clonk series.{% endtrans %} <a href="{{base}}/about">{% trans %}Learn more&hellip;{% endtrans %}</a></p>
 			<hr>
 			<h3>{% trans %}Why should I register?{% endtrans %}</h3>
 			<ul class="list-group">
