--- a/app/templates/functions/navbar.twig
+++ b/app/templates/functions/navbar.twig
@@ -7,10 +7,10 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="{{base}}" data-instant>{{brand}}</a>
+			<a class="navbar-brand" href="{{base}}">{{brand}}</a>
 		</div>
 
-		<div class="collapse navbar-collapse main-navbar-collapse" data-instant>
+		<div class="collapse navbar-collapse main-navbar-collapse">
 			<ul class="nav navbar-nav">
 				<li{% if path.0 == "addons" and path.1 == "rage" %} class="active"{% endif %}><a href="{{base}}/addons/rage">{% trans %}Clonk Rage{% endtrans %}</a></li>
 				<li{% if path.0 == "addons" and path.1 == "openclonk"  %} class="active"{% endif %}><a href="{{base}}/addons/openclonk">{% trans %}OpenClonk{% endtrans %}</a></li>
