--- a/app/templates/root.twig
+++ b/app/templates/root.twig
@@ -29,7 +29,7 @@
 		<div class="container">
 			<footer class="footer">
 				<p class="visible-xs hidden-print">&uarr; <a href="#">{% trans %}Back to top{% endtrans %}</a></p>
-				<p data-instant><a class="text" href="{{base}}">{{brand}}</a> {{site_copyright}} · <a class="text" href="{{base}}/about">{% trans "About the project" %}</a> · <a class="text" href="{{base}}/contact">{% trans "Contact" %}</a></p>
+				<p><a class="text" href="{{base}}">{{brand}}</a> {{site_copyright}} · <a class="text" href="{{base}}/about">{% trans "About the project" %}</a> · <a class="text" href="{{base}}/contact">{% trans "Contact" %}</a></p>
 			</footer>
 		</div>
 	{% endblock %}
@@ -38,8 +38,6 @@
 		<script src="{{resources}}/jquery/jquery.are-you-sure.js"></script>
 		<script src="{{resources}}/bootstrap/js/bootstrap.min.js"></script>
 		<script src="{{resources}}/lorry/js/lorry.js"></script>
-		<script src="{{resources}}/instantclick/instantclick.min.js"></script>
-		<script>InstantClick.init(true);</script>
 		{% for script in scripts %}
 		<script src="{{resources}}{{script}}"></script>
 		{% endfor %}
