--- a/app/templates/site/clonk.twig
+++ b/app/templates/site/clonk.twig
@@ -15,7 +15,7 @@
 			<p>{% trans %}The classic game with hundreds of community-built, high-quality addons. Magical wars, strategic shooters and futuristic settling: Clonk Rage has it all.{% endtrans %}</p>
 			<p>{% trans %}Often the sheer selection is overwelming, so be sure to spread the word and vote for the addons you like.{% endtrans %}</p>
 			<p>
-				<a href="#" class="btn btn-primary" data-instant>{% trans %}Install Clonk Rage{% endtrans %}</a>
+				<a href="#" class="btn btn-primary">{% trans %}Install Clonk Rage{% endtrans %}</a>
 				<a href="http://www.clonk.de?lng={% trans 'en' %}" class="btn btn-default">{% trans %}Visit the official site{% endtrans %}</a>
 			</p>
 		</div>
@@ -25,7 +25,7 @@
 			<p>{% trans %}The opensource successor to the Clonk series, built by players and developers of the previous Clonk titles.{% endtrans %}</p>
 			<p>{% trans %}Although the addon selection is still limited, OpenClonk completely reimaginges a great part of the game and greatly refines the technology, now supporting three-dimensional models within the game.{% endtrans %}</p>
 			<p>
-				<a href="#" class="btn btn-primary" data-instant>{% trans %}Install OpenClonk{% endtrans %}</a>
+				<a href="#" class="btn btn-primary">{% trans %}Install OpenClonk{% endtrans %}</a>
 				<a href="http://www.openclonk.org" class="btn btn-default">{% trans %}Visit the official site{% endtrans %}</a>
 			</p>
 		</div>
@@ -33,7 +33,7 @@
 			<h3>{% trans %}&hellip;only just the beginning{% endtrans %}</h3>
 			<p>{% trans %}Clonk lives from its fans, with dedicated players creating high-quality addons.{% endtrans %}</p>
 			<p>{% trans %}The series appeals to all ages alike and has been around for many years. Addons exist in a huge variety of gameplay and genre, and Lorry offers a central platform for the best of them.{% endtrans %}</p>
-			<a href="{{base}}/addons" class="btn btn-info" data-instant>{% trans %}View the addons{% endtrans %}</a>
+			<a href="{{base}}/addons" class="btn btn-info">{% trans %}View the addons{% endtrans %}</a>
 		</div>
 	</div>
 	<hr>
@@ -43,7 +43,7 @@
 			<p>{% trans %}The official development of Clonk Rage has halted, therefore the community is creating an open source succesor - OpenClonk.{% endtrans %}</p>
 			<p>{% trans %}Both games are different and alike, but the majority of all addons have been created for Clonk Rage. Once you've created something awesome you can distribute it via Lorry, making it instantly available for any interested player.{% endtrans %}</p>
 			<p>
-				<a href="{{base}}/create" class="btn btn-info" data-instant>{% trans %}Visit the publishing portal{% endtrans %}</a>
+				<a href="{{base}}/create" class="btn btn-info">{% trans %}Visit the publishing portal{% endtrans %}</a>
 			</p>
 		</div>
 		<div class="col-md-4">
