--- a/app/templates/site/front.twig
+++ b/app/templates/site/front.twig
@@ -57,14 +57,14 @@
 			<h1><span class="visible-lg">{% trans %}Welcome to Lorry.{% endtrans %}</span><span class="hidden-lg">{% trans %}Welcome{% endtrans %}</span></h1>
 			<p class="lead">{% trans %}Lorry is the place for the best addons for the game series Clonk.{% endtrans %}</p>
 			<p>
-				<a href="{{base}}/register" class="btn btn-lg btn-success" data-instant>{% trans %}Register now{% endtrans %}</a>
-				<a href="{{base}}/clonk" class="btn btn-lg btn-default" data-instant>{% trans %}New to Clonk?{% endtrans %}</a>
+				<a href="{{base}}/register" class="btn btn-lg btn-success">{% trans %}Register now{% endtrans %}</a>
+				<a href="{{base}}/clonk" class="btn btn-lg btn-default">{% trans %}New to Clonk?{% endtrans %}</a>
 			</p>
 		{% endif %}
 			<hr>
 			<h2>{% trans %}In development{% endtrans %}</h2>
 			<p class="text-big">{% trans %}The Lorry platform is actively beeing developed. You can join and try out the features, but we might reset the accounts at some point.{% endtrans %}</p>
-			<a href="{{base}}/about" class="btn btn-info" data-instant>{% trans %}About Lorry{% endtrans %}</a>
+			<a href="{{base}}/about" class="btn btn-info">{% trans %}About Lorry{% endtrans %}</a>
 			<a href="https://clonkspot.org/forum/topic_show.pl?tid=30" class="btn btn-default">{% trans %}Lorry on Clonkspot{% endtrans %}</a>
 		</div>
 	</div>
