update facebook login to new scope naming

--- a/app/templates/account/register.twig
+++ b/app/templates/account/register.twig
@@ -58,7 +58,7 @@
 			<hr class="visible-xs">
 			{% if oauth %}
 			<h2>{% trans %}Nearly done&hellip;{% endtrans %}</h2>
-			<p>{% trans %}You still need to choose your username.{% endtrans %}</p>
+			<p>{% trans %}You still need to choose your username and enter or verify your email address.{% endtrans %}</p>
 			{% else %}
 			<h2>{% trans %}This is Lorry.{% endtrans %}</h2>
 			<p class="lead">{% trans %}Lorry is a fan page, distribution platform and online community for players and fans of the Clonk series.{% endtrans %} <a href="{{base}}/about">{% trans %}Learn more&hellip;{% endtrans %}</a></p>
