--- a/app/templates/functions/addon.twig
+++ b/app/templates/functions/addon.twig
@@ -8,6 +8,7 @@
 	<div class="media-body">
 		<h4 class="media-heading"><a href="{{_addon_url}}">{{ addon.title }}</a></h4>
 		{% if addon.game %}{% include 'functions/tags/game.twig' with {'short' : addon.game.short, 'title' : addon.game.title} %}{% endif %}
+		{% if addon.version %}{% include 'functions/labels/version.twig' with {'version' : addon.version} %}{% endif %}
 		<p>{{addon.description}}</p>
 	</div>
 </li>
