changed addon label/badge order

--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -120,8 +120,12 @@ textarea {
 	text-overflow: ellipsis;
 }
 
-.media-heading a {
+.media-heading > a {
 	color: black;
+}
+
+.media-heading a.label, .media-heading a.badge {
+	color: white;
 }
 
 h1 small .label {
