fix label/badge colors in media-heading

--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -120,12 +120,8 @@ textarea {
 	text-overflow: ellipsis;
 }
 
-.media-heading > a {
+.media-heading a:first-child {
 	color: black;
-}
-
-.media-heading a.label, .media-heading a.badge {
-	color: white;
 }
 
 h1 small .label {
