updated scheduled color

--- a/app/templates/functions/labels/scheduled.twig
+++ b/app/templates/functions/labels/scheduled.twig
@@ -1,4 +1,4 @@
 {% extends 'functions/labels/label.twig' %}
 
-{% block class %}label-info{% endblock %}
+{% block class %}label-warning{% endblock %}
 {% block title %}{% trans %}Release scheduled{% endtrans %}{% endblock %}
