--- a/app/templates/publish/release.twig
+++ b/app/templates/publish/release.twig
@@ -6,8 +6,21 @@
 	<div class="container">
 		<div class="page-header">
 			<h1>
-				<a href="{{base}}/publish/{{addonid}}#releases" class="text-muted">{{addontitle}}</a>
-				<small>{% include 'functions/labels/version.twig' with {'version' : version} %}</small></h1>
+				<a href="{{base}}/publish/{{addonid}}#releases">{{addontitle}}</a>
+				<small>{% include 'functions/labels/version.twig' with {'version' : version} %}
+				{% if released %}
+					{% if latest %}
+						{% include "functions/labels/latest.twig" %}
+					{% endif %}
+				{% else %}
+					{% if scheduled %}
+						{% include "functions/labels/scheduled.twig" %}
+					{% else %}
+						{% include "functions/labels/unreleased.twig" %}
+					{% endif %}
+				{% endif %}
+				</small>
+			</h1>
 		</div>
 		<ul class="nav nav-tabs" id="editAddonTabs">
 			<li class="active"><a href="#general" data-toggle="tab">{% trans "General" %}</a></li>
