disable non-functioning buttons so people don't get confused

--- a/app/templates/publish/edit.twig
+++ b/app/templates/publish/edit.twig
@@ -92,7 +92,7 @@
 						</div>
 					</div>
 					<div class="form-group">
-						<button type="submit" class="btn btn-primary" name="addon-submit">{% trans "Save" %}</button>
+						<button type="submit" class="btn btn-primary" name="addon-submit" disabled>{% trans "Save" %}</button>
 					</div>
 				</form>
 			</div>
