--- a/app/templates/publish/release.twig
+++ b/app/templates/publish/release.twig
@@ -109,7 +109,7 @@
 						</div>
 					</div>
 					<div class="form-group">
-						<button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
+						<button type="submit" class="btn btn-primary" disabled>{% trans "Save" %}</button>
 					</div>
 				</form>
 			</div>
