--- a/app/templates/addon/release.twig
+++ b/app/templates/addon/release.twig
@@ -3,7 +3,11 @@
 {% block content %}
 	<div class="container">
 		<div class="page-header">
-			<h1>{{ title }} / <small><span class="label label-primary">{% trans %}Version {{version}}{% endtrans %}</span></small></h1>
+			<h1>{{ title }}
+				<small>
+					{% include 'functions/labels/version.twig' with {'version' : version} %}
+				</small>
+			</h1>
 		</div>
 		<div class="row">
 			<div class="col-md-8">
