add example comments heading to release page

--- a/app/templates/addon/release.twig
+++ b/app/templates/addon/release.twig
@@ -48,6 +48,8 @@
 				<img src="" style="width: 150px; height: 105px;">
 				<img src="" style="width: 150px; height: 105px;">
 				<img src="" style="width: 150px; height: 105px;">
+				<hr>
+				<h2>{% trans %}Comments{% endtrans %}</h2>
 			</div>
 			<div class="col-md-4 sidebar">
 				<h2>{% trans %}Addon{% endtrans	%}</h2>
