--- a/app/templates/user/edit.twig
+++ b/app/templates/user/edit.twig
@@ -3,7 +3,10 @@
 {% block content %}
 <div class="container">
 	<div class="page-header">
-		<h1>{{ title }} <a href="{{base}}/users/{{username}}"><small>{{username}}</small></a></h1>
+		<h1>
+			<a href="{{base}}/users/{{username}}">{{username}}</a>
+			<small><span class="glyphicon glyphicon-pencil"></span></small>
+		</h1>
 	</div>
 	<div class="row">
 		<div class="col-md-8">
