--- a/app/templates/root.twig
+++ b/app/templates/root.twig
@@ -15,10 +15,10 @@
 	</head>
 	<body>{% block body %}
 		{% include 'functions/navbar.twig' %}
-		{% if site_notice %}
-		<div id="site-notice" class="jumbotron alert-danger">
+		{% if site_notice and site_enabled %}
+		<div id="site-notice" class="jumbotron alert-{{site_notice_class|default('danger')}}">
 			<div class="container">
-		{{site_notice}}
+				{{site_notice}}
 			</div>
 		</div>
 		{% endif %}
@@ -29,7 +29,7 @@
 		<div class="container">
 			<footer class="footer">
 				<p class="visible-xs hidden-print">&uarr; <a href="#">{% trans %}Back to top{% endtrans %}</a></p>
-				<p><a class="text" href="{{base}}">{{brand}}</a> {{site_copyright}} · <a class="text" href="{{base}}/about">{% trans "About the project" %}</a> · <a class="text" href="{{base}}/contact">{% trans "Contact" %}</a></p>
+				<p><a class="text" href="{{base}}">{{brand}}</a> {{site_copyright}}{% if site_enabled %} · <a class="text" href="{{base}}/about">{% trans "About the project" %}</a> · <a class="text" href="{{base}}/contact">{% trans "Contact" %}</a>{% endif %}</p>
 			</footer>
 		</div>
 	{% endblock %}
