--- a/app/templates/addon/release.twig
+++ b/app/templates/addon/release.twig
@@ -40,7 +40,7 @@
 						{% if release_description %}
 							<p>{{ release_description }}</p>
 						{% endif %}
-						<p>{% trans %}Categories{% endtrans %} <a href="#">Shooter</a>, <a href="#">Strategy</a>, <a href="#">Arena</a>.</p>
+<!--						<p>{% trans %}Categories{% endtrans %} <a href="#">Shooter</a>, <a href="#">Strategy</a>, <a href="#">Arena</a>.</p>!-->
 					</div>
 				</div>
 				<hr>
@@ -49,7 +49,7 @@
 				<img src="" style="width: 150px; height: 105px;">
 				<img src="" style="width: 150px; height: 105px;">
 				<hr>
-				<h2>{% trans %}Comments{% endtrans %}</h2>
+<!--				<h2>{% trans %}Comments{% endtrans %}</h2>!-->
 			</div>
 			<div class="col-md-4 sidebar">
 				<h2>{% trans %}Addon{% endtrans	%}</h2>
@@ -61,7 +61,7 @@
 					</p>
 				{% endif %}
 				<h2>{% trans %}Community{% endtrans %}</h2>
-				<p>State: <span class="success">Active</span> [<a href="#" id="state">?</a>]</p>
+<!--				<p>State: <span class="success">Active</span> [<a href="#" id="state">?</a>]</p>!-->
 				<ul>
 					{% if website %}<li><a href="{{website}}">{% trans %}Project page{% endtrans %}</a></li>{% endif %}
 					{% if bugtracker %}<li><a href="{{bugtracker}}">{% trans %}Report a bug{% endtrans %}</a></li>{% endif %}
